; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_out-null.c_null_out_status.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_out-null.c_null_out_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Output = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Output*, i32*, i32, i32, i32, i32, i32, i32, i32)* @null_out_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @null_out_status(%struct.Output* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8) #0 {
  %10 = alloca %struct.Output*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store %struct.Output* %0, %struct.Output** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %19 = load i32, i32* %12, align 4
  %20 = call i32 @UNUSEDPARM(i32 %19)
  %21 = load %struct.Output*, %struct.Output** %10, align 8
  %22 = ptrtoint %struct.Output* %21 to i32
  %23 = call i32 @UNUSEDPARM(i32 %22)
  %24 = load i32*, i32** %11, align 8
  %25 = ptrtoint i32* %24 to i32
  %26 = call i32 @UNUSEDPARM(i32 %25)
  %27 = load i32, i32* %13, align 4
  %28 = call i32 @UNUSEDPARM(i32 %27)
  %29 = load i32, i32* %15, align 4
  %30 = call i32 @UNUSEDPARM(i32 %29)
  %31 = load i32, i32* %14, align 4
  %32 = call i32 @UNUSEDPARM(i32 %31)
  %33 = load i32, i32* %16, align 4
  %34 = call i32 @UNUSEDPARM(i32 %33)
  %35 = load i32, i32* %17, align 4
  %36 = call i32 @UNUSEDPARM(i32 %35)
  %37 = load i32, i32* %18, align 4
  %38 = call i32 @UNUSEDPARM(i32 %37)
  ret void
}

declare dso_local i32 @UNUSEDPARM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
